--- a/tests/map/index.html
+++ b/tests/map/index.html
@@ -1,14 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <meta name="apple-mobile-web-app-capable" content="yes">
-     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-     <meta name="theme-color" content="#00FF00">
-     <link rel="icon" href="logo.png" />
-     <link rel="apple-touch-icon" href="/logo.png">
-     <meta name="apple-mobile-web-app-title" content="PWA">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="theme-color" content="#00FF00" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
+    />
+    <link rel="icon" href="logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+    <meta name="apple-mobile-web-app-title" content="PWA" />
+    <meta name="color-scheme" content="light only" />
+
     <title>PWA</title>
   </head>
   <body>
