--- a/tests/map/index.html
+++ b/tests/map/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
+
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta name="theme-color" content="#00FF00" />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
@@ -18,6 +21,7 @@
     <link rel="apple-touch-icon" href="/logo.png" />
     <meta name="apple-mobile-web-app-title" content="PWA" />
     <meta name="color-scheme" content="light only" />
+    <!-- <meta name="theme-color" content="#005eff" /> -->
 
     <title>PWA</title>
   </head>
