--- a/dev/index.html
+++ b/dev/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
+<head>
+  <!-- Meta tags -->
+  <meta charset="UTF-8">
+  <!-- Set initial viewport and ensure content fits the screen -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <!-- Enable standalone mode for iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- Set status bar style for iOS -->
+  <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
+  <!-- Define the title for the web app when added to the home screen -->
+  <meta name="apple-mobile-web-app-title" content="PWA">
+  <!-- Specify color scheme preference -->
+  <meta name="color-scheme" content="light only">
+  <!-- Favicon and Apple touch icon -->
+  <link rel="icon" href="logo.png">
+  <link rel="apple-touch-icon" href="/logo.png">
 
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
-    />
-    <link rel="icon" href="logo.png" />
-    <link rel="apple-touch-icon" href="/logo.png" />
-    <meta name="apple-mobile-web-app-title" content="PWA" />
-    <meta name="color-scheme" content="light only" />
-    <!-- <meta name="theme-color" content="#005eff" /> -->
+  <!-- Normalize.css for consistent default styling -->
+  <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
 
-    <title>PWA</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <!-- Page title -->
+  <title>PWA</title>
+</head>
+<body>
+  <!-- App root element -->
+  <div id="root"></div>
+
+  <!-- Entry point for the main JavaScript module -->
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
